# swap-pool

./: Cargo.toml  README.md
src/: entity.rs  error.rs  handle.rs  inplace_cell.rs  lib.rs  manager.rs  pool.rs  size.rs  transformer.rs  uuid.rs
