[package]
name = "swap-pool"
version = "0.1.1"
description = "Allow objects to be stored either in RAM or on disk"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/swap-pool"
repository = "https://github.com/krypt0nn/swap-pool"
license = "MIT"
edition = "2021"

[features]
size-of-crate = ["dep:size-of"]
dyn-size-of-crate = ["dep:dyn_size_of"]

[dependencies]
size-of = { version = "0.1.5", optional = true }
dyn_size_of = { version = "0.4.1", optional = true }
