[package]
name = "swap-pool"
version = "0.2.0"
description = "Allow objects to be stored either in RAM or on disk"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/swap-pool"
repository = "https://github.com/krypt0nn/swap-pool"
license = "MIT"
edition = "2021"

[features]
thiserror = ["dep:thiserror"]

timestamp-uuid = []
random-uuid = ["dep:rand"]

crc32-uuid = ["dep:crc32fast"]
xxhash-uuid = ["dep:xxhash-rust"]

size-of-crate = ["dep:size-of"]
dyn-size-of-crate = ["dep:dyn_size_of"]

full = ["thiserror", "random-uuid", "xxhash-uuid", "dyn-size-of-crate"]
default = ["timestamp-uuid"]

[dependencies]
thiserror = { version = "1.0", optional = true }

rand = { version = "0.8.5", optional = true }

crc32fast = { version = "1.3.2", optional = true }
xxhash-rust = { version = "0.8.8", features = ["xxh3"], optional = true }

size-of = { version = "0.1.5", optional = true }
dyn_size_of = { version = "0.4.1", optional = true }
